# zip-manager

./: AGENT.md  CLAUDE.md  README.md  api.html  contributing.html  deploy-gh-pages.sh  development.html  index.html  package-lock.json  package.json  robots.txt  usage.html  vite.config.js
.claude/: settings.local.json
.github/workflows/: deploy-gh-pages.yml  deploy.yml  gh-pages-deploy.yml  jekyll-build.yml  jekyll-deploy.yml
_site/: features.html  feed.xml  installation.html  sitemap.xml
assets/js/: main.js
docs/: .gitignore  Gemfile  _config.yml  api.md  contributing.md  development.md  features.md  index.md  installation.md  usage.md
docs/.sass-cache/4d290c5dd24e8025f8b74f84d1479455470162cd/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
docs/.sass-cache/8c0dc4ff4f482126d271a355cda9afe90885551b/: minima.scssc
docs/_layouts/: default.html  page.html
docs/assets/css/: style.css
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compress.rs  data_type.rs  file_manager.rs  files.rs  lib.rs  lib.rs_corrected.txt  main.rs  rar.rs  sevenz.rs  tar.rs  utils.rs  zip.rs
src/components/: Tab.jsx  TabBar.jsx
src/contexts/: TabContext.jsx
src/lib/: Greet.svelte  Home.svelte  Icon.svelte  Toolbar.svelte
src/modules/Archive/: CompressionProgressWindow.jsx  CreateArchiveModal.jsx
src/modules/Checksum/: ChecksumModal.jsx
src/modules/Extract/: PasswordModal.jsx  ProgressWindow.jsx
src/modules/FileManager/: Breadcumb.jsx  FileItem.jsx  FileList.jsx  PropertiesModal.jsx  Toolbar.jsx  Toolbar_new.jsx  fileicon.css  index.jsx
src/routes/: +layout.svelte  +page.svelte
