[package]
name = "rusty-compress"
version = "0.1.0"
description = "A Tauri App"
authors = ["Hon Nguyen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rusty_compress_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ['unstable'] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
zip = { version = "8.5.0", features = ["chrono"] }
tar = "0.4.44"
flate2 = "1.0.35"
bzip2 = "0.4"
unrar = "0.5.8"
chrono = "0.4.38"
mime_guess = "2.0.5"
open = "5.3.1"
tempfile = "3.14.0"
rand = "0.8.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.2.1"
